2011-02-12  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Fix: Cleanup window error.

2011-02-10  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Fix: `fsvn-browse-diff-local' sequence is wrong.

	* Fix: Save mark activated status in log list mode

2011-02-09  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Improve: Cleanup window when `fsvn-global-cleanup-buffer'

2011-02-08  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Fix: redraw fancy status when committing

2011-02-04  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Fix: fsvn-merged-import-with-log DEST-URL is file, cannot import.

2011-01-28  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Fix: Diff between region respect order between region begin and end in log list mode.

2011-01-23  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Fix: Again misunderstanding of url @

	* Fix: misunderstanding of url @

	* Release: 0.9.9

2011-01-22  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Fix: ediff temp file problem.

2011-01-21  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Fix: fsvn-blame-minor-mode destroy isearch overlay.

	* Fix: default-directory is wrong in browse mode confirmer.

	* Fix: respect to `dired-deletion-confirmer'

	* Add: `fsvn-blame-minor-mode-with-range' bind to nothing.

2011-01-16  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Add: easymenu (file-select)

	* Fix: Display symlink arrow.

2011-01-13  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Fix: setting font lock keywords by `setq'

2011-01-03  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Add: Blame minor mode accept changings.

2010-12-31  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Fix: a lot of commit buffer problem

2010-12-30  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Delete: Unsupport Emacs 22 officially.

2010-12-17  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Add: fsvn-vc-commit-non-query-message
