@@ -153,8 +153,10 @@
        (lambda (b)
          (with-current-buffer b
            (when (equal fsvn-diff-buffer-subcommand-args args)
-             (erase-buffer)
-             (throw 'found b))))
+             (let ((inhibit-read-only t)
+                   buffer-read-only)
+               (erase-buffer)
+               (throw 'found b)))))
        (buffer-list))
       (generate-new-buffer (format "*Fsvn diff %s*" (fsvn-diff-buffer-key-name args))))))
 
@@ -162,8 +164,11 @@
   (with-current-buffer buffer
     (diff-mode)
     (let ((real-args (fsvn-command-args-canonicalize args)))
+      (set (make-local-variable 'diff-added-face) fsvn-diff-add-face)
+      (set (make-local-variable 'diff-removed-face) fsvn-diff-delete-face)
       (set (make-local-variable 'fsvn-popup-result-buffer-p) t)
-      (set (make-local-variable 'fsvn-diff-buffer-subcommand-args) real-args))))
+      (set (make-local-variable 'fsvn-diff-buffer-subcommand-args) real-args))
+    (setq buffer-read-only t)))
 
 (defun fsvn-diff-buffer-key-name (args)
   (catch 'decide
